# pr2_boilerplate

./: README.md
pr2_boilerplate/: CMakeLists.txt  package.xml
pr2_boilerplate/config/: params.yaml
pr2_boilerplate/launch/: pr2_sim.launch
pr2_boilerplate/scripts/: pub_command.py  pub_markers.py
