<?xml version="1.0"?>
<package format="2">
  <name>pr2_boilerplate</name>
  <version>0.0.1</version>
  <description>
    A collection of files to configure the package ros_control_boilerplate
    for the PR2 robot.
  </description>

  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>
  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>visualization_msgs</depend>
  <depend>pr2_description</depend>
</package>
